# CocosXtension

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  README.md
plugin-x_ios.xcworkspace/: contents.xcworkspacedata
plugins/senspark/: CMakeLists.txt
plugins/senspark/classes/: AdMobProtocolAdsImpl.cpp  GoogleProtocolAnalyticsImpl.cpp  SensparkPluginManager.cpp
plugins/senspark/include/: AdColonyProtocolAds.h  AdmobProtocolAds.h  BaasboxProtocolBaaS.h  BaasboxProtocolBaas.h  ChartboostProtocolAds.h  FacebookProtocolAds.h  FacebookProtocolShare.h  FacebookProtocolSocial.h  FacebookProtocolUser.h  FlurryProtocolAds.h  FlurryProtocolAnalytics.h  GameCenterProtocolSocial.h  GameCenterProtocolUser.h  GooglePlayProtocolData.h  GooglePlayProtocolSocial.h  GooglePlayProtocolUser.h  GooglePlusProtocolShare.h  GooglePlusProtocolUser.h  GoogleProtocolAnalytics.h  ParseProtocolBaaS.h  ParseProtocolBaaS.mm  SensparkPlugin.h  SensparkPluginMacros.h  SensparkPluginManager.h  SensparkProtocolAds.h  UnityProtocolAds.h  VungleProtocolAds.h
plugins/senspark/include/senspark/: SensparkPluginFwd.hpp
plugins/senspark/platform/android/: AdColonyProtocolAds.cpp  AdmobProtocolAds.cpp  BaasboxProtocolBaaS.cpp  ChartboostProtocolAds.cpp  FacebookProtocolShare.cpp  FacebookProtocolUser.cpp  GameCenterProtocolSocial.cpp  GameCenterProtocolUser.cpp  GooglePlayProtocolData.cpp  GooglePlayProtocolSocial.cpp  GooglePlayProtocolUser.cpp  GooglePlusProtocolShare.cpp  GooglePlusProtocolUser.cpp  GoogleProtocolAnalytics.cpp  ParseProtocolBaaS.cpp  UnityProtocolAds.cpp  VungleProtocolAds.cpp
plugins/senspark/platform/ios/: AdColonyProtocolAds.mm  AdmobProtocolAds.mm  AdmobProtocolAds.mm.orig  BaasboxProtocolBaaS.mm  BaasboxProtocolBaas.mm  ChartboostProtocolAds.mm  FacebookProtocolAds.mm  FacebookProtocolShare.m  FacebookProtocolShare.mm  FacebookProtocolSocial.mm  FacebookProtocolUser.mm  FlurryProtocolAds.mm  FlurryProtocolAnalytics.mm  GameCenterProtocolSocial.mm  GameCenterProtocolUser.mm  GooglePlayProtocolData.mm  GooglePlayProtocolSocial.mm  GooglePlayProtocolUser.mm  GooglePlusProtocolShare.mm  GooglePlusProtocolUser.mm  GoogleProtocolAnalytics.mm  ParseProtocolBaaS.mm  UnityProtocolAds.mm  VungleProtocolAds.mm
plugins/senspark/proj.android/: .cproject  .project  AndroidManifest.xml  build.gradle  build.xml
plugins/senspark/proj.android/jni/: Android.mk  Application.mk
plugins/senspark/proj.android_studio/: settings.gradle
plugins/senspark/proj.android_studio/libPluginSenspark/: build.gradle
plugins/senspark/proj.android_studio/libPluginSenspark/jni/: Android.mk
plugins/senspark/proj.ios/PluginSenspark.xcodeproj/: project.pbxproj
protocols/: CMakeLists.txt  PluginParam.cpp
protocols/include/: FacebookAgent.h  PluginParam.h  PluginProtocol.h  ProtocolAds.h  ProtocolAds_BACKUP_8617.h  ProtocolAds_LOCAL_8617.h  ProtocolAds_REMOTE_8617.h  ProtocolBaaS.h  ProtocolData.h  ProtocolPlatform.h  ProtocolShare.h  ProtocolSocial.h  ProtocolUser.h
protocols/include/senspark/: integer_sequence.hpp  utility.hpp
protocols/platform/android/: FacebookAgent.cpp  PluginFactory.cpp  PluginJniHelper.cpp  PluginJniHelper.h  PluginJniMacros.h  PluginProtocol.cpp  PluginUtils.cpp  PluginUtils.h  ProtocolAds.cpp  ProtocolBaaS.cpp  ProtocolData.cpp  ProtocolIAP.cpp  ProtocolPlatform.cpp  ProtocolShare.cpp  ProtocolSocial.cpp  ProtocolUser.cpp
protocols/platform/ios/: AdsWrapper.h  AdsWrapper.mm  BaaSWrapper.h  BaaSWrapper.mm  DataWrapper.h  DataWrapper.mm  EReachability.h  EReachability.m  FacebookAgent.mm  IAPWrapper.mm  InterfaceAds.h  InterfaceBaaS.h  InterfaceData.h  InterfaceShare.h  InterfaceSocial.h  InterfaceUser.h  ParseUtils.h  ParseUtils.m  ParseUtils.mm  PluginFactory.mm  PluginProtocol.mm  PluginUtilsIOS.h  PluginUtilsIOS.mm  ProtocolAds.mm  ProtocolBaaS.h  ProtocolBaaS.mm  ProtocolData.m  ProtocolData.mm  ProtocolIAP.mm  ProtocolPlatform.mm  ProtocolShare.mm  ProtocolSocial.mm  ProtocolUser.mm  Reachability.h  Reachability.m  ShareWrapper.h  ShareWrapper.mm  SocialWrapper.h  SocialWrapper.mm  UserWrapper.h  (+1 more)
protocols/proj.android/: .cproject  .project  AndroidManifest.xml  build.gradle
protocols/proj.android/jni/: Android.mk  Application.mk
protocols/proj.android_studio/: build.gradle  settings.gradle
protocols/proj.android_studio/libPluginProtocol/: build.gradle
protocols/proj.android_studio/libPluginProtocol/jni/: Android.mk
protocols/proj.android_studio/libProtocols/: build.gradle
protocols/proj.android_studio/libProtocols/jni/: Android.mk
protocols/proj.ios/PluginProtocol.xcodeproj/: project.pbxproj
protocols/src/senspark/: utility.cpp
(+323 files in other folders)
